dev/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-el-demo
  labels:
    app.kubernetes.io/part-of: kubernetes-el-demo
