dev/manifests/22-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: kubernetes-el-demo
  labels:
    app: web
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: db-headless
  namespace: kubernetes-el-demo
  labels:
    app: db
spec:
  clusterIP: None
  selector:
    app: db
  ports:
    - name: http
      port: 80
      targetPort: 80
